buck-out/log/2022-03-06_19h52m47s_buildcommand_6f3d1e4b-5ed9-40b5-bece-d7667d67a747/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.1s
CREATING ACTION GRAPH: FINISHED IN 0.1s
src/canvas.cpp:40:8: error: no member named 'cout' in namespace 'std'
  std::cout << path << std::endl;
  ~~~~~^
src/canvas.cpp:40:29: error: no member named 'endl' in namespace 'std'
  std::cout << path << std::endl;
                       ~~~~~^
2 errors generated.
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 1.5s 10/9 JOBS, 3 UPDATED

Top slow rules
    //:cg: 0.4s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-canvas.cpp.o90b2484d,default/ppandcompile.argsfile]

stderr: src/canvas.cpp:40:8: error: no member named 'cout' in namespace 'std'
  std::cout << path << std::endl;
  ~~~~~^
src/canvas.cpp:40:29: error: no member named 'endl' in namespace 'std'
  std::cout << path << std::endl;
                       ~~~~~^
2 errors generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-canvas.cpp.o90b2484d,default.
